delete date title

--- a/content/blog/til/20180816-0817 IAT 준비.md
+++ b/content/blog/til/20180816-0817 IAT 준비.md
@@ -1,13 +1,12 @@
 ---
-title: 20180816-0817 IAT 준비
+title: IAT 준비
 date: 2018-08-16
 category: TIL
 ---
 
 # IAT 준비
 
-여러분들이 IAT를 대비해서 공부해야 할 부분들을 알려드립니다.
-다음을 중점적으로 파악합니다.
+IAT를 대비해서 공부해야 할 부분들. IAT에서 중점적으로 체크하는 부분 :
 
 - basic conditional statement & operator
 
