--- a/content/blog/til/20180811 프리코스 마지막 토이시간, 남은 한 달 동안 어떻게 공부해야 할 것인가.md
+++ b/content/blog/til/20180811 프리코스 마지막 토이시간, 남은 한 달 동안 어떻게 공부해야 할 것인가.md
@@ -1,5 +1,5 @@
 ---
-title: 20180811 프리코스 마지막 토이시간, 남은 한 달 동안 어떻게 공부해야 할 것인가
+title: 프리코스 마지막 토이시간, 남은 한 달 동안 어떻게 공부해야 할 것인가
 date: 2018-08-11
 category: TIL
 ---
