--- a/content/blog/development/2018-08-09-pre.md
+++ b/content/blog/development/2018-08-09-pre.md
@@ -24,15 +24,13 @@ category: essay
 
 프로그래밍 경험이 아예 없다면, 사전 학습이 필요합니다. 사전 학습 과정으로 생활코딩이나 Udacity가 제시되는데, Udacity를 추천합니다. 비록 영어지만, Udacity에서는 배운 내용을 바로 실습해볼 수 있는 과제나 문제가 있어서 기억에 남습니다. 영어를 잘 못 하신다고 해도, 크롬 브라우저를 사용하면 웹사이트 번역의 도움을 받을 수 있어서 영어의 장벽이 대폭 줄어듭니다.
 
-1, 2주의 자바 기초 강의는 개념만 짚고 넘어가기 때문에 사전에 공부하지 않으면 방금 뭐가 지나간 거지? 싶을 겁니다. 2주 동안 과제로 프로그래밍 90문제를 풀어야 하는데 일정에 맞게 빠르게 끝내는 것을 추천합니다. 만약 푸는데 시간이 좀 걸릴 것 같다면, 주차가 지나면 훨씬 쉬워지니 넘어가시고 가능한 문제부터 푸셔요. 돌아가는 것은 잘못이 아닙니다. 레벨업을 하고 재도전 하면 쉽게 풀 수 있습니다.
+1, 2주의 자바스크립트 기초 강의는 개념만 짚고 넘어가기 때문에 사전에 공부하지 않으면 방금 뭐가 지나간 거지? 싶을 겁니다. 2주 동안 과제로 프로그래밍 90문제를 풀어야 하는데 일정에 맞게 빠르게 끝내는 것을 추천합니다. 만약 푸는데 시간이 좀 걸릴 것 같다면, 주차가 지나면 훨씬 쉬워지니 넘어가시고 가능한 문제부터 푸셔요. 돌아가는 것은 잘못이 아닙니다. 레벨업을 하고 재도전 하면 쉽게 풀 수 있습니다.
 
 > 완벽한 코드를 짜려고 하지 마세요. 처음부터 완벽한 코드를 짤 수는 없어요.
 
 첫 오프라인 수업에서 기억에 남았던 멘토님 말이에요. 코드를 잘 짜려는 압박감에서 벗어날 수 있었어요.
 
-3, 4주 Scope & Closure, this, call, apply, bind, 개념개념...
-
----
+## 3, 4주 Scope & Closure, this, call, apply, bind, 개념개념...
 
 자바스크립트에서 쉽게 이해하기 힘든 개념을 만나게 됩니다. 당장 완벽히 이해할 수 없다고 해도 여러분만 이해 못 한 것은 아니니, 너무 고통스러워할 필요는 없습니다. 시간이 걸립니다.
 
@@ -40,9 +38,7 @@ category: essay
 
 언더바 과제에서 많은 분이 포기합니다. 즉, 언더바 과제만 포기하시지 않는다면 수료 가능성이 높아진다는 뜻입니다. 언더바 part 1은 그나마 쉬운 편이니 코드스테이츠에서 제시하는 일정에 맞춰서 마무리 지으시길 권합니다. 언더바 part 2가 최종 보스 수준이고, 시간을 많이 소모하기 때문에 충분한 시간을 확보해야 하거든요.
 
-5, 6주 HTML & CSS & jQuery
-
----
+## 5, 6주 HTML & CSS & jQuery
 
 Javascript 강의가 일단락됩니다. html과 css는 한 숨 돌리면서 들을 수 있어요. 여기서 배운 내용을 twittler(트위터 비슷한 사이트)을 구현하는데 쓰이기 때문에, 배운 태그들을 복습하실 때 사용을 한 번쯤 해보시면 좋습니다.
 
@@ -50,9 +46,7 @@ Javascript 강의가 일단락됩니다. html과 css는 한 숨 돌리면서 들
 
 underbar 과제를 제출한다면, 수료에 거의 다가섰다고 볼 수 있습니다. 완벽하게 개념을 이해하고 풀지 않아도 괜찮아요. 일단 나아가세요.
 
-7,8 주 과제...과제...과제...
-
----
+## 7, 8 주 과제... 과제... 과제...
 
 8주는 지금까지의 과제를 전부 제출하고 마무리 지어야하기 때문에 여유가 없습니다. 가능한 7주 이내에 twittler 과제를 끝내는 걸 추천합니다. 8주 차의 Recursion 과제는 최소 3일 이상 잡으셔야 하기에, 시간 배분이 필요합니다.
 
