--- a/content/blog/til/20180802 손병대 개발자 토크.md
+++ b/content/blog/til/20180802 손병대 개발자 토크.md
@@ -18,7 +18,7 @@ https://youtu.be/7fLGIsbr2dg
 
 압박 면접 시에 무례한 회사에는 안 가는 게 좋다. 그런 사람과 같이 일할 수 있을까?
 
-조급할 거 없다. 프론트엔드 엄청 넓은 영역. 조금씩 영역을 넓혀가라. 특정 좁은 분야의)의 탑이 되거나.
+조급할 거 없다. 프론트엔드 엄청 넓은 영역이다. 조금씩 영역을 넓혀가라. 특정 좁은 분야의 탑이 되거나.
 
 다른 사람들과 공유하는 게 공부가 됨. 독학은 비추천.
 
