--- a/content/blog/til/20181017 IM08D23 checkpoint 13.md
+++ b/content/blog/til/20181017 IM08D23 checkpoint 13.md
@@ -13,11 +13,9 @@ category: TIL
 5. LEFT JOIN, LEFT OUTER JOIN
 6. food가 user_id 하나만 가질 수 없기 때문에 관계 테이블을 하나 둬서 만들어야 한다.
 
-7.
-
 ## shortly - Express
 
-## auth
+### auth
 
 - Establishing Identity
 
@@ -41,7 +39,7 @@ npm 라이브러리 bcrypt 설명 읽고 쓰면 됨
 
 세션을 유지하면서, 사용이 로그인되어 있는지 아닌지 관리. 클라이언트한테 파일(쿠키)를 심어놓고(즉, 일종의 세션정보) 한번 요청 했을 때, 서버가 브라우저를 알 수 있는 방법은 쿠키를 심는 방법밖에 없음. 브라우저가 쿠키를 들고 가면 서버가 분석하고 판단.
 
-## learn
+### learn
 
 무얼 모르는지를 알고, 미니멀하게 배워서 미니멀하게 만드는 과정을 배우는 것.
 
