--- a/content/blog/til/20181019-1020 IM08D25~D26 deployment.md
+++ b/content/blog/til/20181019-1020 IM08D25~D26 deployment.md
@@ -4,10 +4,6 @@ date: 2018-10-20
 category: TIL
 ---
 
-## 배포
-
-4시까지 AWS?
-
 ## 개발과 배포환경
 
 - 개발 Development - uni test(내가 뭘 올리면 뭐가 올라갔는지 보는 거)
@@ -16,7 +12,7 @@ category: TIL
 
 - Integration
 
-  만든 것들을 합쳐서 돌려봄. 따로 돌아간다고 합쳤을 때 돌아간다는 보장은 없다.
+  만든 것들을 합쳐서 돌려봄. 따로 돌아간다고, 합쳤을 때 돌아간다는 보장은 없다.
 
 - Staging
 
@@ -24,9 +20,9 @@ category: TIL
 
 - Production
 
-  Ship it! 배달한다(릴리즈)
+  Ship it! 배달한다(release)
 
-  master upload 할때마다 버전을 릴리즈 해놓으면 좋다.
+  master upload 할때마다 버전을 release 해놓으면 좋다.
 
 ​ Latest는 문제가 될 수 있음
 
