--- a/content/blog/til/20180927 IM08D07, 20180928 IM08D08 SubClass Dance Party.md
+++ b/content/blog/til/20180927 IM08D07, 20180928 IM08D08 SubClass Dance Party.md
@@ -1,5 +1,5 @@
 ---
-title: IM08D08 SubClass Dance Party
+title: Immersive Sprint - SubClass Dance Party
 date: 2018-09-27
 category: TIL
 ---
@@ -108,16 +108,11 @@ Subclassing 꼭 읽어야 함.
 
 super는 부모의 this를 가리킴
 
-
-
-
-
-
 ```
 
 ## beforeEach?
 
-스펙에서 테스트에서 beforeEach 항목은 테스트를 실행하기 전에 꼭 한번 실행하라라는 뜻임.
+스펙spec 테스트에서 beforeEach 항목은 테스트를 실행하기 전에 꼭 한번 실행하라라는 뜻임.
 
 ```javascript
 beforeEach(function() {
