--- a/content/blog/til/20181010-20181011 IM08D17-18 NODE JS.md
+++ b/content/blog/til/20181010-20181011 IM08D17-18 NODE JS.md
@@ -1,5 +1,5 @@
 ---
-title: IM08D17-18 NODE JS
+title: Immersive Sprint - NODE.js
 date: 2018-10-11
 category: TIL
 ---
@@ -30,7 +30,7 @@ commonJS 문법이라고 하는 commonjs module system에서 따온 `export` and
 
 포트 닫기, 어떻게 포트를 강제로 열고 닫는지 알아보기.
 
-## 노드
+## 노드 키워드
 
 JS 인터프리터
 
