--- a/content/blog/til/20181016 콜백과 모듈.md
+++ b/content/blog/til/20181016 콜백과 모듈.md
@@ -1,12 +1,12 @@
 ---
-title: 20181016 콜백과 모듈
+title: 콜백과 모듈
 date: 2018-10-16
 category: TIL
 ---
 
 ## callback
 
-콜백은 단순히 자바스크립트 함수를 사용하기 위한 규칙의 이름일 뿐이다. 자바스크립트 언어엔 '콜백'이란 것이 없다. 대부분의 함수처럼 즉시 결과를 반환하는 대신 다만, 콜백을 사용하는 함수는 결과를 산출하는데 약간의 시간이 걸린다. 쉽게 와닿지 않는 '비동기'라는 단어는 일종의 '시간이 걸린다' 또는 '지금 발생하지는 않지만 미래에 발생한다'를 의미한다. 일반적으로 콜백은 I / O를 할 때만 사용된다. (ex, 다운로드, 파일 읽기, 데이터베이스와 통신)
+콜백은 단순히 자바스크립트 함수를 사용하기 위한 규칙의 이름일 뿐이다. 자바스크립트 언어엔 '콜백'이란 것이 없다. 대부분의 함수처럼 즉시 결과를 반환하는 대신, 콜백을 사용하는 함수는 결과를 산출하는데 약간의 시간이 걸린다. 쉽게 와닿지 않는 '비동기'라는 단어는 일종의 '시간이 걸린다' 또는 '지금 발생하지는 않지만 미래에 발생한다'를 의미한다. 일반적으로 콜백은 I / O를 할 때만 사용된다. (ex, 다운로드, 파일 읽기, 데이터베이스와 통신)
 
 콜백은 당장 결과를 낼 수 없을 때, 다른 프로그램의 진행을 **블록** 시키지 않기 위해, 비동기 영역으로 보내버린다. 콜백을 이해하는 핵심은 비동기 작업이 완료될 때가 언제인지 모르는 경우에 콜백을 사용한다는 점이다.
 
