--- a/content/blog/til/20181019-1020 IM08D25~D26 deployment.md
+++ b/content/blog/til/20181019-1020 IM08D25~D26 deployment.md
@@ -1,5 +1,5 @@
 ---
-title: IM08D25~D26 deployment
+title: Immersive Sprint - deployment
 date: 2018-10-20
 category: TIL
 ---
@@ -34,18 +34,19 @@ category: TIL
 
 - process.env.PORT || 4568 a가 없으면 4568 포트로
 
+## 기타
+
 결정 구조가 늦은 회사는 비추천
 
 작게 만들어서 성공하고 분사
 
-yum remove
+`yum remove`
 
-apt -get
+`apt -get`
 
 ##
 
-db.json 스키마 구조를 예상해보기 몽구스 검색해서
+몽구스 검색해서 db.json 스키마 구조를 예상해보기
 
-willmount 필요 없음
-
+react에서 willmount 필요 없음
 didmount만 있으면 됨
