--- a/content/blog/til/20181020 IM08D26 IM07의 조언.md
+++ b/content/blog/til/20181020 IM08D26 IM07의 조언.md
@@ -1,10 +1,8 @@
 ---
-title: IM08D26 IM07의 조언
+title: 프로젝트 전 Immersive 7기의 조언
 date: 2018-10-20
 category: TIL
 ---
-
-## IM07의 조언
 
 스프린트는 오늘로 끝났다. 지난 기수인 7기 사람들이 와서 이야기해주는 시간이 있었다. 정리해본다.
 
@@ -24,7 +22,7 @@ category: TIL
 
 아이템보다는 사람을 따라가라.
 
-2주 + 4주 6주 동안 했다. -> 창업 케이스
+프로젝트 하나를 2주 + 4주, 6주 동안 했다. -> 창업 케이스
 
 설문조사시 같이 하기 싫은 사람 꼭 적어라.
 
