--- a/content/blog/til/20181212 제로초님 블로그 관련 세션.md
+++ b/content/blog/til/20181212 제로초님 블로그 관련 세션.md
@@ -1,5 +1,5 @@
 ---
-title: 제로초님 세션 - 개발자라면 록로그를 해라
+title: 제로초님 세션 - 개발자라면 블로그를 해라
 date: 2018-12-12
 category: Session
 ---
@@ -14,7 +14,7 @@ category: Session
 모든 걸 다 직접 만들기로 결정.
 디자인, 프론트부터 서버, DB까지.
 
-초보몽키님 블로그 언급. 매주 하나씩 할려고 함.
+초보몽키님 블로그 언급. 매주 하나씩 하려고 함.
 
 전문성이 떨어져도 괜찮다. 꾸준함이 중요.
 
@@ -28,7 +28,7 @@ category: Session
 
 애드센스로 광고비 년당 백만원 정도.
 
-대신 블로그를 하다보니 책 집필 제안, 동영상 강좌 제안 등을 받았다.
+대신 블로그를 하다 보니 책 집필 제안, 동영상 강좌 제안 등을 받았다.
 
 하루 두세시간을 블로깅에 투자한다.
 
@@ -36,17 +36,17 @@ heroku에서 호스팅 받고 있다.
 
 페이스북 프론트엔드 개발 페이지
 
-거기에 일주일에 한번씩 도배처럼 글을 쓰고 피드백도 남겨달라고 홍보를 했다.
+거기에 일주일에 한 번씩 도배처럼 글을 쓰고 피드백도 남겨달라고 홍보를 했다.
 
 # Q&A
 
-남을 잘 챙기거나 관심 있는 성격은 아니지만, 코드 리뷰를 꼭 한다. 지금 회사에서는 코드 리뷰를 함. 서로 봐주고, 직급 상관 없이 지적, 서로 지적, 개선점 찾기, 코드 리뷰 문화를 중요시 함. 머지가 늦어질 수도 있다. 실제 비지니스에서는 어느정도 타협하는 수밖에 없다.
+남을 잘 챙기거나 관심 있는 성격은 아니지만, 코드 리뷰를 꼭 한다. 지금 회사에서는 코드 리뷰를 함. 서로 봐주고, 직급 상관없이 지적, 서로 지적, 개선점 찾기, 코드 리뷰 문화를 중요시함. 머지가 늦어질 수도 있다. 실제 비지니스에서는 어느 정도 타협하는 수밖에 없다.
 
 길벗의 내용은 다 온라인에 공개하는 정책이 있다. 그게 오히려 책(Node.js 교과서) 매출을 늘려준다고 한다.
 
 자바스크립트 기본 문법을 알아야 함.
 
-책과 블로깅의 차이 : 660, 책 쓰는데 일년 씀.
+책과 블로깅의 차이 : 660, 책 쓰는데 일 년 씀.
 
 벨로퍼트님은 660쪽 2년 걸렸다고 함.
 
@@ -54,11 +54,11 @@ heroku에서 호스팅 받고 있다.
 
 10분 볼 글을 3분으로 나눠서 에드센스 페이지를 위해 짧게 짧게 씀. 짧게 짧게 써야 부담이 없음. 쓰는 사람은 최소 1시간 넘게 걸리니까. 고칠 때도 편하고.
 
-책의 내용들은 흐름 자체가 에러가 없지만, 실무에서는 모든 게 에러고, 에러 터지는 다반사.
+책의 내용은 흐름 자체가 에러가 없지만, 실무에서는 모든 게 에러고, 에러 터지는 다반사.
 
-직접 타이핑 해보면서 타이핑에서 나오는 에러, 버전에서 나오는 에러 등을 느껴보면 좋겠음. 챕터 끝에 스스로 해보기는 답이 없이 해봐서 꼭 해보길 바람. 일단 에러를 해결하는 부분에 집중해서. 직접 해보는게 중요.
+직접 타이핑 해보면서 타이핑에서 나오는 에러, 버전에서 나오는 에러 등을 느껴보면 좋겠음. 챕터 끝에 스스로 해보기는 답이 없이 해봐서 꼭 해보길 바람. 일단 에러를 해결하는 부분에 집중해서. 직접 해보는 게 중요.
 
-생활 코딩 첫 강좌 내가 뭘 모르고, 내가 뭘 더 배워야하는지는 알아야겠다 싶을 때 생활코딩 강좌가 가이드가 됨.
+생활 코딩 첫 강좌 내가 뭘 모르고, 내가 뭘 더 배워야 하는지는 알아야겠다 싶을 때 생활코딩 강좌가 가이드가 됨.
 
 온라인에서 이야기하는 게 전파력이 있음.
 
@@ -66,7 +66,7 @@ heroku에서 호스팅 받고 있다.
 
 솔직히 말하면 내 블로그는 컨텐츠가 도움이 안 됨.
 
-흔히 에러를 해결하기 위해 검색하게 되는데, (내 블로그엔) 잘되는 거 밖에 없음.
+흔히 에러를 해결하기 위해 검색하게 되는데, (내 블로그엔) 잘되는 거밖에 없음.
 
 에러를 해결하려면 문장 대신 짧게 짧게 넣어보기.
 
@@ -74,17 +74,17 @@ heroku에서 호스팅 받고 있다.
 
 ## db 질문
 
-SQL -> 관계끼리 쓰는데 편함
+SQL -> 관계끼리 쓰는 데 편함
 
 NO SQL -> 역정규화 -> 데이터가 많으면 NOSQL 쓸 수밖에 없음
 
-결국 둘 다 쓰게 됨
+결국 (SQL NO SQL) 둘 다 쓰게 됨.
 
 블로그 DB는 몽고 DB로 되어 있음.
 
-Mongodb React Stack 딱히 생각하고 고른 것은 아님.
+Mongo DB React Stack 딱히 생각하고 고른 것은 아님.
 
-진짜 돈 되는 개발을 처음 한 게 친구랑 웹사이트 만드는 걸 6개월 정도 하고, 돈을 버니까 프로 개발자라는 자각을 느낌. 내 프로그램을 돈 주고 사는 사람이 있다는 걸 알았을 떄.
+진짜 돈 되는 개발을 처음 한 게 친구랑 웹사이트 만드는 걸 6개월 정도 하고, 돈을 버니까 프로 개발자라는 자각을 느낌. 내 프로그램을 돈 주고 사는 사람이 있다는 걸 알았을 때.
 
 나는 CSS 잘 하진 않는데, CSS 도 규칙이 있음. CSS도 블럭 포매팅 컨텍스트를 알면 동작 원리를 알 수 있다. (나도 깊게 공부하지 않아서 잘 모른다.)
 
