--- a/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
+++ b/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
@@ -1,7 +1,7 @@
 ---
 title: 개발자가 되기 전 알았더라면 좋았을 3가지
-date: 2019-03-20
-category: 'development'
+date: 2019-01-16
+category: 'Session'
 ---
 
 adobe 프론트엔드 엔지니어로 일하는 Alex Kim님 세션 정리
