--- a/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
+++ b/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
@@ -4,29 +4,27 @@ date: 2019-01-16
 category: 'Session'
 ---
 
-adobe 프론트엔드 엔지니어로 일하는 Alex Kim님 세션 정리
+Adobe in San Francisco 프론트엔드 엔지니어로 리모트로 일하는 Alex Kim님 세션 정리
 
 ## 2015년의 내게 말해주고 싶은 것들
 
 ---
 
-adobe frontend engineer in sanfrancisco
-
 ## 1. 목표 덜 세우고 시스템 구축하기 (Goals < Systems)
 
 목표를 세우는 것보다는 시스템을 구축하는 것이 더 도움이 된다.
 
-문제를 푸는 것은 목표일뿐, 어떻게 푸느냐가 시스템이다. 목표를 무시하고 과정에만 시간을 쏟으면 어떨까? 목표를 무시하더라도, 시스템 자체가 체계적이라면... 괜찮다.
+문제를 푸는 것은 목표일뿐, 어떻게 푸느냐가 시스템이다. 목표를 무시하고 과정에만 시간을 쏟으면 어떨까? 목표를 무시하더라도, 시스템 자체가 체계적이라면 괜찮다.
 
 목표지향적인 접근의 문제점들
 
-1. 목표 자체가 결과의 차이를 만들어내지는 않는다
+1. 목표 자체가 결과의 차이를 만들어내지는 않는다.
 
 2. 목표 이루는 것 === 일시적인 변화
 
 3. 목표가 가져오는 불안감과 걱정
 
-   a. Deferred Happiness Promise : 미래의 나만이 누릴 수 있는 행복, 목표를 이루는 행복해지겠지, 목표를 이루면 괜찮아지겠지
+   a. Deferred Happiness Promise : 미래의 나만이 누릴 수 있는 행복, 목표를 이루는 행복해지겠지, 목표를 이루면 괜찮아지겠지...
 
    b. 목표를 못 이름 === 불행
 
@@ -38,21 +36,21 @@ adobe frontend engineer in sanfrancisco
 
 대부분의 사람들은 결과부터 시작한다. 자아부터 시작하면 어떨까? 바깥부터 시작하기보다 안에서부터 시작하면 어떨까? 이미 난 유능한 개발자라고 생각하면 어떨까? (리버스 엔지니어링으로 접근해보기)
 
-`벨로퍼트의 나는 짱짱 개발자라고 생각하기와 맞닿아있는 느낌`
+`벨로퍼트님의 스스로 짱짱 개발자라고 생각하기와 맞닿아있는 느낌`
 
 - 아이덴티티 베이스드 어프로치Identity based Apporach
 
   지속적인 변화를 위한 알고리즘
 
-  1. 어떤 개발자가 될지 결정하자
+  1. 어떤 개발자가 될지 결정하자.
 
-  2. 소소한 습관들로 스스로에게 증명하자
+  2. 소소한 습관들로 스스로에게 증명하자.
 
-     -> 작은 벽돌 쌓기 같은 느낌? 큰 이벤트보다 소소한 습관들에 투자하면 어떨까? 내가 어떤 모습이 되고 나서 그렇게 행동하는게 아니라 이미 그런 사람이라고 생각하고 행도하면 어떨까?
+     `작은 벽돌 쌓기 같은 느낌? 큰 이벤트보다 소소한 습관들에 투자하면 어떨까? 내가 어떤 모습이 되고 나서 그렇게 행동하는게 아니라 이미 그런 사람이라고 생각하고 행동하면 어떨까?`
 
 - Identity based Apporach의 장점
 
-  - 내 자아와 일관된 행동을 하는게 더 쉬워져서 의지력에 덜 의존하게 됨
+  - 내 자아와 일관된 행동을 하는게 더 쉬워져서 의지력에 덜 의존하게 됨.
 
   - Small Win을 이루기 쉽다. 과정 자체가 더 재밌어진다.
 
@@ -76,7 +74,7 @@ adobe frontend engineer in sanfrancisco
 
   - 인터뷰는 문제 풀이가 아니다! 인터뷰는 스토리 텔링
 
-    > 우리가 쓰는 건 코드지만, 우리가 일하는 건 사람이다
+    > 우리가 쓰는 건 코드지만, 우리가 일하는 건 사람이다.
 
   - 어떻게 개발자로 전향하게 되었는지 궁금하게 만들기
 
@@ -84,7 +82,7 @@ adobe frontend engineer in sanfrancisco
   - 모든 개발자는 영업직원
   - 모든 것은 협상의 개념으로 생각해볼 수 있음
 
-`결국 우리가 같이 일하고 싶은 건 기계가 아니라 사람이다...`
+`결국 우리가 같이 일하고 싶은 건 기계가 아니라 사람이다.`
 `(스크립트로 접근한 개발자, 기계적인 사람?)`
 
 - minseoalex.kim
@@ -92,7 +90,7 @@ adobe frontend engineer in sanfrancisco
 
 > 자신의 장점이 뭔지 알면 충분하다.
 
-> 또 튜토리얼 하면서 배워야 해? 이짓거리 언제까지 해야해? -> 다 알 수 없다. 꼭 알아야 하는 것만 잘 알아야 한다.
+> 또 튜토리얼 하면서 배워야 해? 이 짓 거리 언제까지 해야 해? -> 다 알 수 없다. 꼭 알아야 하는 것만 잘 알아야 한다.
 
 > 막상 혼자 일하니까 게을러진다. 집에서 일할 때가 많다. 게을러지기 쉽다. 자유로움을 얻는 대신 외로움을 얻는다.
 
