--- a/content/blog/til/20180827 자바스크립트의 나쁜 점들.md
+++ b/content/blog/til/20180827 자바스크립트의 나쁜 점들.md
@@ -10,10 +10,10 @@ from 더글라스 크락포드 - 자바스크립트 핵심가이드
 
 1. ==
 
-   결코 ==/!=를 사용하지 말고 항상 ===/!==를 사용하라.
+   결코 `==`/`!=`를 사용하지 말고 항상 `===`/`!==`를 사용하라.
 
    ```javascript
-   `` == '0' // 거짓
+   ;`` == '0' // 거짓
    0 == '' // 참
    0 == '0' // 참
 
@@ -21,40 +21,45 @@ from 더글라스 크락포드 - 자바스크립트 핵심가이드
    false == '0' //참
 
    false == undefined // 거짓
-   false == null      // 거짓
-   null == undefined  // 참
+   false == null // 거짓
+   null == undefined // 참
 
    ' \t\r\n ' == 0 // 참
-
-   위에서 ==을 ===로 바꾸면 모두 거짓이 된다.
    ```
 
-2) with
+위에서 `==`을 `===`로 바꾸면 모두 거짓이 된다.
+
+2. with
 
 예측 못한 결과들을 낳을 수 있다. 사용하지 않는게 좋다. 게다가 자바스크립트 프로세서의 속도를 현저하게 느리게 만든다. 왜냐하면 with 문은 변수 이름의 어휘적 바인딩을 어렵게 하기 때문.
 
 ```javascript
 with (obj) {
-    a = b;
+  a = b
 }
+```
 
 는 다음과 같은 의미이다.
 
+```js
 if (obj.a === undefined) {
-    a = obj.b === undefined ? b : obj.b;
+  a = obj.b === undefined ? b : obj.b
 } else {
-    obj.a = obj.b === undefined ? b : obj.b;
+  obj.a = obj.b === undefined ? b : obj.b
 }
+```
 
 결국 이 with 문은
-a= b;
-a = obj.b;
-obj.a = b;
-obj.a = obj.b;
+
+```js
+a = b
+a = obj.b
+obj.a = b
+obj.a = obj.b
+```
 
 이들 중 하나와 같게 되는데 어떤 문장으로 실행될지는 프로그램을 봐서는 알 수 없다. 또한 프로그램 실행할 때마다 달라질 수 있고,
 심지어 프로그램을 실행시키는 동안 달라질 수 있다.
-```
 
 > 프로그램을 제대로 읽을 수 없고 어떻게 실행할지를 예측할 수 없다면, 프로그램이 원하는 대로 제대로 실행할 것이라고 확신할 수 없다.
 
@@ -136,17 +141,18 @@ myvalue = myObjec[myKey]
 9. 함수 문장 vs 함수 표현식
 
    함수 문장은 var 문장과 함수값 조합의 축약형이다.
-   (책에서는 함수 문장이라고 번역되어 있지만, 아무래도 함수 선언식을 말하는 것 같다.)
 
-   다음과 같은 함수형 문장은,
+`책에서는 함수 문장이라고 번역되어 있지만, 아무래도 함수 선언을 말하는 것 같다. 더 찾아보니 함수선언(Function Declarations)은 Function Statement 라고도 하며 말 그대로 함수 문장이란 뜻이다. 이는 곧 실행가능한 코드블럭이 아니며 함수의 정의를 나타내는 문장으로 해석되며 따라서 코드해석에 따른 수행결과가 존재하지 않는다는 것을 의미한다.`
 
-   `function foo() {}`
+다음과 같은 함수형 문장은,
 
-   다음과 같은 의미라고 할 수 있다.
+`function foo() {}`
 
-   `var foo = function foo( ) {};`
+다음과 같은 의미라고 할 수 있다.
 
-   필자는 책 전체에 걸쳐 함수 표현식(두번째 형식)을 사용했다. 왜냐하면 foo가 함수값(function value)을 가진 변수라는 것을 명확하게 나타내기 때문이다. **자바스크립트라는 언어를 잘 사용하기 위해선 함수도 값(value)이라는 것을 이해하는 것이 중요.**
+`var foo = function foo( ) {};`
+
+필자는 책 전체에 걸쳐 함수 표현식(두번째 형식)을 사용했다. 왜냐하면 foo가 함수값(function value)을 가진 변수라는 것을 명확하게 나타내기 때문이다. **자바스크립트라는 언어를 잘 사용하기 위해선 함수도 값(value)이라는 것을 이해하는 것이 중요.**
 
 ---
 
@@ -165,6 +171,7 @@ notPreDefined();
 var notPreDefined = function notPreDefined() {
     alert("ok");
 };
+```
 
 이 예는 notPreDefined() 부분에 함수가 정의되지 않았다는 오류가 발생해야 정상.
 왜냐하면 아래에 있는 함수 정의가 함수 문장으로 정의된 것이 아니기 때문.
@@ -172,11 +179,10 @@ var notPreDefined = function notPreDefined() {
 그래서 위의 코드를 IE에서 확인하면 오류가 나지 않는다.
 하지만 함수 정의 부분을 다음과 같이 하여 함수 이름을 빼면 오류가 발생한다.
 
-
-var notPreDefined = function () {
-    alert("ok");
-};
-
+```js
+var notPreDefined = function() {
+  alert('ok')
+}
 ```
 
 공식적인 문법은 function이라는 단어로 시작하는 문장을 함수 문장이라고 가정하고 있기 때문에 문장의 첫 부분에 함수 표현식을 사용할 수 없다. 이를 위한 대안은 함수 표현식을 다음의 예처럼 괄호로 묶는 것이다.
@@ -193,19 +199,19 @@ var notPreDefined = function () {
 
 10. 데이터 타입 랩퍼
 
-    new Boolean, new Number, new String 등을 사용하지 마라.
-    또한, new Object와 new Array 사용도 피하고 {}와 []를 사용해라.
+    `new Boolean`, `new Number`, `new String` 등을 사용하지 마라.
+    또한, `new Object`와 `new Array` 사용도 피하고 `{}`와 `[]`를 사용하라.
     이러한 랩퍼들은 완전히 필요가 없으며 때때로 혼란을 줄 수 있다는게 판명됐다.
 
 11. new
 
-    자바스크립트의 new 연산자는 피연산자의 프로토타입 멤버들을 상속하는 객체를 생성하고 이 객체를 this에 바인딩하면서 피연산자를 호출한다. 이러한 호출은 new의 피연산자(생정자 함수)가 새로 만들어진 객체를 원하는 대로 커스타마이징하여 반환할 수 있는 기회를 제공한다.
+    자바스크립트의 `new` 연산자는 피연산자의 프로토타입 멤버들을 상속하는 객체를 생성하고 이 객체를 `this`에 바인딩하면서 피연산자를 호출한다. 이러한 호출은 `new`의 피연산자(생성자 함수)가 새로 만들어진 객체를 원하는 대로 커스타마이징하여 반환할 수 있는 기회를 제공한다.
 
-    만약 new 연산자를 빼먹게 되면 일반적인 함수 호출(function invocation)을 하게 되고 이때 this는 새로운 객체가 아니라 전역객체에 바인딩된다. 이렇게 되면 새로운 속성을 초기화 할 때 전역변수에 접근하게 된다. 아주 안 좋은 결과다. new를 안 써도 컴파일 시나 실행 시에 어떠한 경고도 없다.
+    만약 `new` 연산자를 빼먹게 되면 일반적인 함수 호출(function invocation)을 하게 되고 이때 this는 새로운 객체가 아니라 전역객체에 바인딩된다. 이렇게 되면 새로운 속성을 초기화 할 때 전역변수에 접근하게 된다. 아주 안 좋은 결과다. `new`를 안 써도 컴파일 시나 실행 시에 어떠한 경고도 없다.
 
-    new와 함께 사용하기 위해 만든 함수의 이름은 각 단어의 첫 글자를 대문자로 표기하고 그외의 것들에는 이러한 표기법을 사용하지 않는 것이 좋다. (파스칼 표기법). 이렇게 코딩 규칙을 사용함으로써 new를 생략한 실수를 찾을 수 있는 단서를 제공할 수 있다.
+    `new`와 함께 사용하기 위해 만든 함수의 이름은 각 단어의 첫 글자를 대문자로 표기하고 그외의 것들에는 이러한 표기법을 사용하지 않는 것이 좋다. (파스칼 표기법). 이렇게 코딩 규칙을 사용함으로써 `new`를 생략한 실수를 찾을 수 있는 단서를 제공할 수 있다.
 
-    물론 new 연산자를 사용하지 않는 것이 더 나은 정책이다.
+    물론 `new` 연산자를 사용하지 않는 것이 더 나은 정책이다.
 
 12) void
 
