--- a/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
+++ b/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
@@ -6,9 +6,7 @@ category: 'Session'
 
 Adobe in San Francisco 프론트엔드 엔지니어로 리모트로 일하는 Alex Kim님 세션 정리
 
-## 2015년의 내게 말해주고 싶은 것들
-
----
+# 2015년의 내게 말해주고 싶은 것들
 
 ## 1. 목표 덜 세우고 시스템 구축하기 (Goals < Systems)
 
