--- a/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
+++ b/content/blog/session/개발자가 되기 전 알았더라면 좋았을 3가지.md
@@ -26,7 +26,7 @@ Adobe in San Francisco 프론트엔드 엔지니어로 리모트로 일하는 Al
 
    b. 목표를 못 이름 === 불행
 
-`세션 듣다가 든 생각 : 갑자기 로또에 당첨되서 부자가 되었다고 한들, 그 부를 이룰 수 있을까? 삶을 어떻게 살지에 대한 철학이 없다면 그게 그 사람에게 어떤 영향을 미칠 수 있을까? 지속적인 변화를 이루려면 시스템이 필요한 것이 아닌가? 아예 목표를 무시하라는 흥미로운 제안. 목표만이 위주인 삶이라면 그 목표가 좌절되었을 때의 삶은? 과정 자체가 즐거울 수는 없을까?`
+`세션 듣다가 든 생각 : 갑자기 로또에 당첨되서 부자가 되었다고 한들, 그 부를 지킬 수 있을까? 삶을 어떻게 살지에 대한 철학이 없다면 갑자기 얻은 부가 그 사람에게 어떤 긍정적인 영향을 미칠 수 있을까? 지속적인 변화를 이루려면 시스템이 필요한 것이 아닌가? 아예 목표를 무시하라는 Alex kim님의 흥미로운 제안. 목표만이 위주인 삶이라면 그 목표가 좌절되었을 때의 삶은? 과정 자체가 즐거울 수는 없을까?`
 
 ## 2. 행동 변화의 3가지 레이어 이해
 
