--- a/content/blog/til/20190410 Mobx.md
+++ b/content/blog/til/20190410 Mobx.md
@@ -31,6 +31,12 @@ action을 한번에 일으킬 수 있음.
 
 정규 문법은 아니지만, babel로 변환 가능. decorator 함수가 필요 없어짐.
 
+### Store?
+
+Mobx에서는 State와 비지니스 로직을 포함하는 Class만을 Store라고 부름.
+
 ## reference
 
-https://velog.io/@velopert/MobX-1-%EC%8B%9C%EC%9E%91%ED%95%98%EA%B8%B0-9sjltans3p
+[MobX (1) 시작하기](https://velog.io/@velopert/MobX-1-%EC%8B%9C%EC%9E%91%ED%95%98%EA%B8%B0-9sjltans3p)
+
+[React에서 Mobx 경험기 (Redux와 비교기) - 우아한형제들 기술 블로그](http://woowabros.github.io/experience/2019/01/02/kimcj-react-mobx.html)
