--- a/content/blog/til/20180827 자바스크립트의 나쁜 점들.md
+++ b/content/blog/til/20180827 자바스크립트의 나쁜 점들.md
@@ -24,7 +24,7 @@ from 더글라스 크락포드 - 자바스크립트 핵심가이드
    false == null // 거짓
    null == undefined // 참
 
-   ' \t\r\n ' == 0 // 참
+   '\t\r\n' == 0 // 참
    ```
 
 위에서 `==`을 `===`로 바꾸면 모두 거짓이 된다.
@@ -136,7 +136,7 @@ myvalue = myObjec[myKey]
 
 ```
 
-자바에서 비트 연산자는 정수에 대해서 동작한다. 그런데, 자바스크립트에는 정수형은 없고 단지 배 정도의 부동 소수점 숫자형만이 존재한다. 그래서 비트 연산자는 대상이 되는 숫자를 일단 정수형으로 변환한 다음에 비트 연산을 수행하고 다시 원래 타입으로 되돌린다. 대부분의 언어에서 비트 연산자는 하드웨어에 친근하고 속도도 매우 빠르지만, 자바스크립트에서 비트 연산자는 하드웨어와 전혀 동떨어져 있고 속도도 매우 느리다. 자바스크립트가 비트 연산을 위해 사용되는 경우는 매우 드물다. 그래서 자바스크립트 프로그램에서 원래 &을 사용하는 경우보다 &&을 사용하려다가 &으로 사용하는 경우가 더 많다. 비트 연산자의 존재는 오히려 잠재된 버그를 만들어내기 쉽다.
+자바에서 비트 연산자는 정수에 대해서 동작한다. 그런데, 자바스크립트에는 정수형은 없고 단지 배 정도의 부동 소수점 숫자형만이 존재한다. 그래서 비트 연산자는 대상이 되는 숫자를 일단 정수형으로 변환한 다음에 비트 연산을 수행하고 다시 원래 타입으로 되돌린다. 대부분의 언어에서 비트 연산자는 하드웨어에 친근하고 속도도 매우 빠르지만, 자바스크립트에서 비트 연산자는 하드웨어와 전혀 동떨어져 있고 속도도 매우 느리다. 자바스크립트가 비트 연산을 위해 사용되는 경우는 매우 드물다. 그래서 자바스크립트 프로그램에서 원래 `&`을 사용하는 경우보다 `&&`을 사용하려다가 &으로 사용하는 경우가 더 많다. 비트 연산자의 존재는 오히려 잠재된 버그를 만들어내기 쉽다.
 
 9. 함수 문장 vs 함수 표현식
 
