--- a/content/blog/til/20180827-0901 pre immersive 사전학습.md
+++ b/content/blog/til/20180827-0901 pre immersive 사전학습.md
@@ -8,7 +8,7 @@ category: TIL
 
 페어 프로그래밍 진행 방법은 기본적으로 한 명이 타이핑을 하고 다른 한 명은 실시간 리뷰를 하는 것.실제 적용방식은 다양한듯. 모니터, 키보드, 마우스 모두 두 개씩 준비해서 각자 사용하고, 정해진 역할, 시간 없이 실시간으로 대화를 하면서 누구라도 타이핑을 할 수 있게 하는 방식도 있다. [출처](https://kihoonkim.github.io/2018/01/01/Agile/pair-programming/)
 
-키보드 정복자/ 감정노동으로 치닿지 않게 주의할 것. 같이 고민하고, 같이 대화를 해야 한다. 모니터 앞에만 있을 필요도 없다. 다른 사람을 불러서 의견을 들을 수도 있다. **머리 속에 있는 생각을 계속 공유를 해야 한다.** 페어가 알아서 하겠지라며 생각하는 걸 멈추면 안 된다. 계속 생각하고 이야기를 나누어야 한다. 타이핑을 하는 것보다 대화를 하는 것이 더 중요하다.
+키보드 정복자/감정노동으로 치닿지 않게 주의할 것. 같이 고민하고, 같이 대화를 해야 한다. 모니터 앞에만 있을 필요도 없다. 다른 사람을 불러서 의견을 들을 수도 있다. **머리 속에 있는 생각을 계속 공유를 해야 한다.** 페어가 알아서 하겠지라며 생각하는 걸 멈추면 안 된다. 계속 생각하고 이야기를 나누어야 한다. 타이핑을 하는 것보다 대화를 하는 것이 더 중요하다.
 
 ## html & internet
 
@@ -18,7 +18,7 @@ cookies - remember who you are
 
 SSL TLS - https, digital certificate
 
-# Client & Server
+## Client & Server
 
 Client-side --- Internet --- Server-side --- Database
 
@@ -28,7 +28,7 @@ Client-side --- Internet --- Server-side --- Database
 
 브라우저를 web client, user agent
 
-WEB Application 이 web sever
+WEB Application이 web sever
 
 쌍방이 통신하면서 당사자 쌍방이 필요로 하는 문법, 규칙이 필요한데 이를 기술 용어로 프로토콜이라고 한다. 두 인간이 의사 소통 할 때, 같은 언어를 사용해야 하고, 문법 규칙이 같을 때 서로의 말을 이해할 수 있는 것처럼, 컴퓨터로 마찬가지로 프로토콜을 통해 서로 통신한다. HTTP/FTP/WebSocket(표준 프토로콜) 여기선 HTTP 프로토콜만 다룬다.
 
