--- a/content/blog/til/20181008-20181009 IM08D15-16 REDUX.md
+++ b/content/blog/til/20181008-20181009 IM08D15-16 REDUX.md
@@ -9,16 +9,16 @@ category: TIL
 ```react
 1. 리액트는 프레임워크가 아니다. 라이브러리다.
 리액트는 two-way data flow가 아니라 one way flow다.
-리덕스가 플럭스 라이브러리
+리덕스가 flux 라이브러리
 프레임워크랑 라이브러리 차이 알아보기!
 
-2. 버츄얼 돔은 새로운 부분만 렌더링 해줌. 리액트의 큰 특징 중 하나. 리액트의 장점 : 버츄얼 돔을 써서 빠르다! 컴퍼넌트 리렌더를 효과적으로 할 수 있게 해줌.
+2. 버츄얼 DOM은 새로운 부분만 렌더링 해줌. 리액트의 큰 특징 중 하나. 리액트의 장점 : 버츄얼 DOM을 써서 빠르다! component reRender를 효과적으로 할 수 있게 해줌.
 
-3. 돔을 잘 바꿀 수 있게 해줌.
+3. DOM을 잘 바꿀 수 있게 해줌.
 
-4. props 부모 컴퍼넌트로부터 자식 컴넌트로 속성을 내려주는데 사용, state는 컴퍼넌트의 현재 상태를 나타냄. 라이프 사이클을 통해서 액션을 바꿔줌. 컴퓨터는 상태기계. 상태를 조절하는 것이 컴퍼넌트. 어떤 때 pros를 쓰고, 어떤때 스테이터스를 써야 하는지 알아야 한다.
+4. props 부모 컴퍼넌트로부터 자식 컴퍼넌트로 속성을 내려주는데 사용, state는 컴퍼넌트의 현재 상태를 나타냄. 라이프 사이클을 통해서 액션을 바꿔줌. 컴퓨터는 상태기계. 상태를 조절하는 것이 컴퍼넌트. 어떤 때 pros를 쓰고, 어떤때 스테이터스를 써야 하는지 알아야 한다.
 
-5. import, export 같은 경우를 es5로 바꿔줌. Babel은 컴파일러지 번들러는 아님. 3가지 차이점(컴파일러, 트랜스파일러, 번들러의 차이를 알아야 함. 공식 문서를 읽어야 함.)
+5. import, export 같은 경우를 es5로 바꿔줌. Babel은 컴파일러지, 번들러는 아님. 3가지 차이점(컴파일러, 트랜스파일러, 번들러의 차이를 알아야 함. 공식 문서를 읽어야 함.)
 
 Redux의 정의(3번) : Redux is the name of a Flux library that is used to manage state in a React application.
 
@@ -32,10 +32,10 @@ Initial values can be set for state
 
 State can be passed from parent components to child components as props
 
-7. 펑셔널도 내부적으로 렌더 됨. 리턴은 항상 있어야 함.
+7. functional도 내부적으로 렌더 됨. return은 항상 있어야 함.
 return도 렌더와 동일.
-어레이 형태로 리턴이 됨. 멀티풀 형태로 리턴이 됨. 이건 최근 변경상황.
-소괄호하는 것은 사실 리턴(리턴 스테트먼트를 생략한 es2016 문법)
+array 형태로 return이 됨. multiple 형태로 return이 됨. 이건 최근 변경상황.
+소괄호하는 것은 사실 return(return statement를 생략한 es2016 문법)
 
 * 모든 컴퍼넌트는 엘리먼트를 리턴함.
 스테이트풀하다 -> 클래스로 만든 것
@@ -44,15 +44,14 @@ state는 순수 오브젝트.
 9. 1번 어느 정도는 동의하지만 리덕스에 비하면 별로라는 의미로?
     프레임 워크가 아니다. 모든 유틸리티를 제공하지 않는다.
 
-11. DiDmount?
+11. didmount?
     언제 데이터가 들어올지 모르니까!
     라이프 싸이클은 자체적으로 돌아가고.
-	렌더에 사이트 이펙트가 생길만한 것을 넣으면 안됨.
-	다 마운트 된 이후에 스테이트가 안전하게 셋할 수 있는 환경을 만들어야.
-생각해볼 문제.
+	render에 사이트 이펙트가 생길만한 것을 넣으면 안됨.
+	다 mount 된 이후에 state가 안전하게 셋할 수 있는 환경을 만들어야.
+    생각해볼 문제.
 
 12. Define a function that updates state on component A, pass the function as a prop to component B, and invoke the function when B is clicked on.
-
 ```
 
 ## 리덕스 설치
@@ -159,23 +158,21 @@ export default (state) => {
 
 ## 리덕스를 사용하는 순간, state는 단 하나의 REDUX STORE에 관리되기를 원한다는 것.
 
-그래서 그렇게 바꿔줘야 하는 거. 기존 state 데이터는 몽땅 store에 넣는 것이 원칙.
+그래서 그렇게 바꿔줘야 하는 거. 기존 state 데이터는 몽땅 store에 넣는 것이 원칙. (로컬 state를 좀 사용해도 괜찮긴 하다.)
 
-- \- Redux is a predictable state container for JavaScript apps.
+- Redux is a predictable state container for JavaScript apps.
 
-- \- The createStore factory function from Redux is used to create a Redux STORE
+- The createStore factory function from Redux is used to create a Redux STORE
 
-- \- The Reducer is the only mandatory argument passed into createStore()
+- The Reducer is the only mandatory argument passed into createStore()
 
-- \- A REDUCER is just a function. A function that takes in two parameters. The first being the STATE of the app, and the other being an ACTION
+- A REDUCER is just a function. A function that takes in two parameters. The first being the STATE of the app, and the other being an ACTION
 
-- \- A Reducer always returns the NEW STATE of your application.
+- A Reducer always returns the NEW STATE of your application.
 
-- \- The INITIAL STATE of your application, initialState is the second
+- The INITIAL STATE of your application, initialState is the second argument passed into the createStore function call.
 
-  argument passed into the createStore function call.
-
-- \- Store.getState() will return the current state of your application. Where Store is a valid Redux STORE.
+- Store.getState() will return the current state of your application. Where Store is a valid Redux STORE.
 
 ## state를 업데이트하는 유일한 방법
 
@@ -183,22 +180,26 @@ setState()와 달리 리덕스는 state를 업데이트 하기 위한 유일한 
 
 일반적인 패턴은
 
-```react
+```js
 {
     type : "",
     payload : {}
 }
+```
 
 ex)
+
+```js
 {
-	type : "withdraw_money",
+    type : "withdraw_money",
     payload : {
        amount : "$4000"
     }
 }
+```
+
 type은 작업을 설명
 payload는 정보를 넣는 객체
-```
 
 ## reducer
 
@@ -227,61 +228,63 @@ function reducer(state, action) {
 
 리덕스 앱에서는 모든 작업이 reducer를 통과한다. 액션을 구분하기 위해 action.type을 지정하여 사용한다.
 
-```react
-function reducer (state, action) {
-	switch (action.type) {
-		case "is_open":
-			return;  //return new state
-		case "is_clicked":
-			return; //return new state
-		default:
-		return state;
-	}
+```js
+function reducer(state, action) {
+  switch (action.type) {
+    case 'is_open':
+      return //return new state
+    case 'is_clicked':
+      return //return new state
+    default:
+      return state
+  }
 }
-
 ```
 
 ## action creator
 
-```react
-export function setTechnology (text) {
-    return {
-        type : "SET_TECHNOLOGY",
-        tech : text
-    }
+```js
+export function setTechnology(text) {
+  return {
+    type: 'SET_TECHNOLOGY',
+    tech: text,
+  }
 }
+```
 
 es6 ver.
-const SetTechnology = text => ({type : "SET_TECHNOLOGY", text})
+
+```js
+const SetTechnology = text => ({ type: 'SET_TECHNOLOGY', text })
 ```
 
 ## redux의 폴더 컨벤션
 
 `actions`, `reducers` , `store` 폴더를 만들어서 각각 저장하는게 일반적.
 
-## reducer에서 리턴된 값을 절대로 변경하면 안 된다.
+## reducer에서 리턴된 값을 절대로 변경하면 안 된다
 
 항상 새로운 state를 반환해야 함.
 
-```react
+```js
 // 아래처럼 하면 절대 안 됨!
 export default (state, action) => {
   switch (action.type) {
-    case "SET_TECHNOLOGY":
-      state.tech = action.text;
-      return state;
+    case 'SET_TECHNOLOGY':
+      state.tech = action.text
+      return state
 
     default:
-      return state;
+      return state
   }
-};
+}
 
 // 대신에
 return {
-        ...state, // 이렇게!
-        tech: action.text
-  };
+  ...state, // 이렇게!
+  tech: action.text,
+}
+```
+
 이렇게 해야 한다. 상태를 변경하는 대신
 새로운 객체를 반환해야 한다.
-
-```
