--- a/content/blog/til/20191028 런어데이 보카 개발로그.md
+++ b/content/blog/til/20191028 런어데이 보카 개발로그.md
@@ -41,10 +41,20 @@ category: development
 
 런어데이 보카는 초기에는 미니 프로젝트로 기획되었기 때문에, 다양한 커리큘럼을 다루진 않을 거라는 가정하에 만들어졌습니다. 실 서비스 중에, 다양한 커리큘럼을 다루는 단어 웹앱으로 만들어보자는 의견이 있었습니다.
 
-영어 단어뿐만 아니라 스페인어나, 프랑스어, 아재 개그 등의 컨텐츠를 다뤄보기로 했고, 단어 웹앱의 특성을 살릴 수 있게 하기 위해서는 여러 코스를 아우르는 커리큘럼 카테고리가 필요했습니다. 따라서 후반기 작업에선 커리큘럼 작업이 주가 되었습니다. 비디오 코스(영상을 보고 단어를 학습하고, 테스트를 보는 기능)등 단조로운 학습 패턴을 벗어나기 위한 작업도 진행했습니다. 하지만, 컨텐츠 제작자가 회사를 떠나게 되면서, 컨텐츠 수급의 어려움을 겪게 되고, 추가 된 작업은 실제로 유저에게 배포되진 못했습니다. 회사에서는 메인 프로젝트에 집중해야 하는 상황이었기에 자원을 더 할애할 수 없었습니다. 조금 더 시간적 여력이 있었다면, SSR도 적용시켜볼 수 있고, 구글 광고 등을 통한 비지니스 모델을 마련할 수 있지 않았을까 하는 아쉬움도 있습니다. 물론, 지금처럼 계속 유저에게 돈을 주는 방식으로는 할 수 없었을 겁니다. 더 유저에게 돈을 지급하지 않고, 컨텐츠만 제공한다면 유저가 계속 학습을 했을지도 궁금하네요.
+![커리큘럼 화면](https://user-images.githubusercontent.com/39457256/75139554-466fcc00-5730-11ea-8509-dace715cc25f.png)
+
+###### 당시 준비하던 커리큘럼
+
+영어 단어뿐만 아니라 스페인어나, 프랑스어, 아재 개그 등의 컨텐츠를 다뤄보기로 했고, 단어 웹앱의 특성을 살릴 수 있게 하기 위해서는 여러 코스를 아우르는 커리큘럼 카테고리가 필요했습니다. 따라서 후반기 작업에선 커리큘럼 작업이 주가 되었습니다.
+
+![모바일 비디오 코스 퀴즈 화면](https://user-images.githubusercontent.com/39457256/75139560-4a035300-5730-11ea-9f22-0b24e75a18b5.png)
+
+###### 모바일 뷰에서 보이는 비디오 코스 퀴즈
+
+비디오 코스(영상을 보고 단어를 학습하고, 테스트를 보는 기능)등 단조로운 학습 패턴을 벗어나기 위한 작업도 진행했습니다. 하지만, 컨텐츠 제작자가 회사를 떠나게 되면서, 컨텐츠 수급의 어려움을 겪게 되고, 추가 된 작업은 실제로 유저에게 배포되진 못했습니다. 회사에서는 메인 프로젝트에 집중해야 하는 상황이었기에 자원을 더 할애할 수 없었습니다. 조금 더 시간적 여력이 있었다면, SSR도 적용시켜볼 수 있고, 구글 광고 등을 통한 비지니스 모델을 마련할 수 있지 않았을까 하는 아쉬움도 있습니다. 물론, 지금처럼 계속 유저에게 돈을 주는 방식으로는 할 수 없었을 겁니다. 유저에게 돈을 지급하지 않고, 컨텐츠만 제공한다면 유저가 계속 학습을 했을지도 궁금하네요.
 
 ## 기타 등등
 
 - 시퀄라이즈를 사용했을 때 썩 유쾌하지 않았던 경험이 있고, 작업 기한에 맞추기 위해서, ORM 대신 쿼리 빌더인 knex를 사용했습니다. 이 부분에 대해서는 따로 포스팅 하려 합니다.
 
-- [구글 TTS](https://cloud.google.com/text-to-speech/?hl=ko) 를 사용하여 소리 지원을 했으며, 음성 머신 러닝 기술을 사용한 WaveNet 버전 음성을 사용하여, 사람과 구별하기 어려운 수준의 음성을 제공했습니다. 구글 TTS를 사용하여 음성을 MP3 파일로 받은 후, 그걸 S3에 전송하여 링크를 db에 입력한 후 서빙하였습니다. 구글 TTS는 100만자까지는 무료로 제공되기에, S3 비용 외에는 추가 비용이 들지 않았습니다.
+- [구글 TTS](https://cloud.google.com/text-to-speech/?hl=ko) 를 사용하여 발음 지원을 했습니다. 음성 머신 러닝 기술을 사용한 WaveNet 버전 음성을 사용하여, 사람과 구별하기 어려운 수준의 음성을 제공했습니다. 구글 TTS를 사용하여 음성을 MP3 파일로 받은 후, 그걸 S3에 전송하여 링크를 DB에 입력한 후 서빙하였습니다. 구글 TTS는 100만자까지는 무료로 제공되기에, S3 비용 외에는 추가 비용이 들지 않았습니다.
